--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 
         <ol class="standards">
             <li>Be inclusive by default</li>
-            <li>Know the criteria you need to meet, and aim to go further</li>
+            <li>Know what you need to meet, and aim to go further</li>
             <li>Respect platform conventions, but know when to go against them</li>
             <li>Strive for simplicity</li>
             <li>Respect user preferences</li>
@@ -57,7 +57,7 @@
 
         <section>
 
-            <h2>Know the criteria you need to meet, and aim to go further</h2>
+            <h2>Know what you need to meet, and aim to go further</h2>
 
             <ul class="standard-details">
                 <li>Always go beyond the minimum accessibility guidelines</li>
