add footer and create link styles

--- a/index.html
+++ b/index.html
@@ -215,5 +215,8 @@
         </section>
 
     </main>
+    <footer>
+        <a href="https://github.com/dashouse/accessible-cross-platform-ui-standards">View project on GitHub</a>
+    </footer>
   </body>
 </html>
