--- a/index.html
+++ b/index.html
@@ -45,9 +45,9 @@
             <h3>Rationale:</h3>
 
             <ul class="rationale-details">
-                <li>Discoverability, awareness and understanding of settings and how they could help</li>
-                <li>Web / Webviews cannot use settings to meet accessibility standards. Cross-platform design will never be aligned</li>
-                <li>Adding extra UI when a screen reader is detected buckets all disabilities together, promotes the idea of a “normal” and “other” view</li>
+                <li>Settings require awareness, ease of discovery and an understanding of how they could help. Don't assume people who could benefit from Accessibility settings are aware they exist</li>
+                <li>Web or Webviews within apps cannot use OS settings to meet accessibility standards. If you rely on accessibility settings in app, shared cross-platform design will not be possible</li>
+                <li>Adding extra UI when a screen reader is detected buckets unrelated disabilities together, promotes the idea of a “normal” and “other” view</li>
 
             </ul>
 
@@ -69,8 +69,8 @@
 
             <ul class="rationale-details">
                 <li>All websites, web apps and web-views should exceed WCAG 2.2 AA</li>
-                <li>Choose to follow the European Standard for Accessibility for Native apps which excludes 6 WCAG success criteria (and modified 13)</li>
-                <li>Design and QA will have less ambiguity about what they should audit native apps and web against</li>
+                <li>Choose to follow something like the European Standard for Accessibility for Native apps which excludes 6 WCAG success criteria (and modified 13)</li>
+                <li>Alighing to a standard means Design and QA will have less ambiguity about what they should audit native apps and web against</li>
                 <li>The European Accessibility Act (EAA) is coming</li>
             </ul>
 
@@ -94,6 +94,7 @@
                 <li>Native operating systems have some amazing accessibility features that are a great enhancement to any experience</li>
                 <li>You'll benefit from yearly updates and improvements using iOS and Android patterns</li>
                 <li>Google and Apple don’t always get it right when it comes to accessible UI decisions. In fact, they have proven history of getting it wrong</li>
+                <li>Many public service apps have gone against Apple and Android guidelines in some areas for Accessibility reasons</li>
             </ul>
 
         </section>
@@ -114,7 +115,7 @@
 
             <ul class="rationale-details">
                 <li>Everything on the screen is something a user needs to think about</li>
-                <li>Unproven or elements of little value are often left in interfaces</li>
+                <li>Unproven or elements of little value are often left in interfaces indefinitely</li>
                 <li>Know the right time to be playful or expressive. Opportunities for Delight and Desirability are built on a strong foundation of being Functional and Useful</li>
             </ul>
 
@@ -135,7 +136,7 @@
             <h3>Rationale:</h3>
 
             <ul class="rationale-details">
-                <li>Light and Dark mode are not accessibility features</li>
+                <li>Light and Dark themes are not explicit accessibility features, they should both meet WCAG 2.2</li>
                 <li>Having a single mode that is accessible will exclude people that cannot use that mode</li>
                 <li>Over a third of people increase their font size or use an accessibility feature</li>
                 <li>We don’t get to choose how people view our websites and services</li>
@@ -161,9 +162,9 @@
 
             <ul class="rationale-details">
                 <li>We need to actively promote design is “how things work” and not just what it looks like</li>
-                <li>Organisations always under estimate the issues caused by “skinning” websites</li>
+                <li>Organisations always under estimate the accessibility issues caused by “skinning” websites</li>
                 <li>Inconsistent keyboard interaction is significantly more impactful to a user than the wrong colour or wrong border radius</li>
-                <li>People that move between platforms or domains should have a similar experience</li>
+                <li>People that move between platforms or domains should have a predicatble experience</li>
             </ul>
 
         </section>
@@ -184,8 +185,8 @@
 
             <ul class="rationale-details">
                 <li>Webviews, even in “Software” need to be treated as websites as they cannot access many accessibility features of mobile operating systems</li>
-                <li>The design of web and native will likely have to be different unless native applications follow web standards. Web cannot follow native standards</li>
-                <li>People should be able to recognise when they are in a webview as their interactions and audible cues will be different</li>
+                <li>The design of web and native will likely have to be different in a number of places. Web cannot always follow native standards because the UI maybe inacessible if used on web</li>
+                <li>People should be able to recognise when they are in a webview. Their interactions and audible cues will be different and they may need to adjust how they browse</li>
             </ul>
 
         </section>
@@ -198,8 +199,8 @@
 
             <ul class="standard-details">
                 <li>The majority of websites and apps are not accessible</li>
-                <li>Don't base your standards on other companies. Let them to base their standards on you</li>
-                <li>Be ok with parts of the design being different</li>
+                <li>Don't base your standards on other companies or competetors. Let them to base their standards on you</li>
+                <li>Be ok with parts of the design being different when they have to be</li>
             </ul>
 
 
@@ -207,9 +208,10 @@
 
             <ul class="rationale-details">
                 <li>WebAim surveyed the top 1 million home pages and 56,791,260 distinct accessibility errors were detected—an average of 56.8 errors per page</li>
-                <li>If we base what good is on other people’s choices we add to the problem</li>
+                <li>If we base what good is on other people’s choices we only add to the problem</li>
                 <li>Many perceived “inspirational”, “modern”, “exciting” brands simply do not consider accessibility enough (or at all)</li>
                 <li>Many leading design agencies and ux consultancies or development houses do the absolute bare minimum for accessibility</li>
+                <li>You can always do more</li>
             </ul>
 
         </section>
