--- a/index.html
+++ b/index.html
@@ -11,8 +11,10 @@
   </head>
   <body>
     <header>
-        <h1>Accessible cross-platform UI standards</h1>
-        <p>A set of standards for designing accessible UI across the web, iOS and Android</p>
+        <div>
+            <h1>Accessible cross-platform UI standards</h1>
+            <p>A set of standards for designing accessible UI across the web, iOS and Android.</p>
+        </div>
     </header>
 
     <main>
@@ -231,7 +233,9 @@
 
     </main>
     <footer>
-        <a href="https://github.com/dashouse/accessible-cross-platform-ui-standards">View project on GitHub</a>
+        <div>
+            <a href="https://github.com/dashouse/accessible-cross-platform-ui-standards">View project on GitHub</a>
+        </div>
     </footer>
   </body>
 </html>
