--- a/index.html
+++ b/index.html
@@ -78,8 +78,7 @@
                 <ul class="rationale-details">
                     <li>All websites, web apps and web-views should exceed WCAG 2.2 AA</li>
                     <li>The European Standard for Accessibility excludes 6 WCAG success criteria (and modified 13) for appications. Read about this on <a href="https://appt.org/en/guidelines/en-301-549">Appt.org - EN 301 549</a>. Keep an eye on <a href="https://www.w3.org/TR/wcag2ict-22/">WCAG2ITC</a> and take part in the conversation.</li>
-                    <li>Alighing to a standard means Design and QA will have less ambiguity about what they should audit native apps and web against</li>
-                    <li>The European Accessibility Act (EAA) is coming</li>
+                    <li>Aligning to a universal standard means Design and QA will have less ambiguity about what they should audit native apps and web against</li>
                 </ul>
             </div>
 
