--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
   <body>
     <header>
         <div>
+            <div class="status">Draft</div>
             <h1>Accessible cross-platform UI standards</h1>
             <p>A set of standards for designing accessible UI across the web, iOS and Android.</p>
         </div>
