Update content to be more concise

--- a/index.html
+++ b/index.html
@@ -50,8 +50,8 @@
 
                 <ul class="rationale-details">
                     <li>Settings require awareness, ease of discovery and an understanding of how they could help. Don't assume people who could benefit from Accessibility settings are aware they exist</li>
-                    <li>Web or Webviews within apps cannot use OS settings to meet accessibility standards. If you rely on accessibility settings in app, shared cross-platform design will not be possible</li>
-                    <li>Adding extra UI when a screen reader is detected buckets unrelated disabilities together, promotes the idea of a “normal” and “other” view</li>
+                    <li>Web or Webviews within apps cannot reliably use OS settings to meet accessibility standards. If you rely on accessibility settings in app, shared cross-platform design is not possible</li>
+                    <li>Adding accessible UI only when a screen reader is detected buckets unrelated disabilities together. Avoid making an “accessibilty view" and make your default experince accessible.</li>
     
                 </ul>
 
@@ -78,7 +78,7 @@
 
                 <ul class="rationale-details">
                     <li>All websites, web apps and web-views should exceed WCAG 2.2 AA</li>
-                    <li><a href="https://www.w3.org/TR/wcag2ict-22/">WCAG2ITC</a> has been updated to reflect the changes in WCAG 2.2. WCAG2ICT provides a "notes in the margin" approch to how WCAG 2.2 can bee applied to non-web software and documents</li>
+                    <li><a href="https://www.w3.org/TR/wcag2ict-22/">WCAG2ITC</a> provides a "notes in the margin" approch to how WCAG 2.2 can bee applied to non-web software and documents</li>
                     <li>The European Standard for Accessibility excludes 6 WCAG success criteria (and modified 13) for appications. Read about this on <a href="https://appt.org/en/guidelines/en-301-549">Appt.org - EN 301 549</a></li>
                     <li>Aligning to a universal standard means Design and QA will have less ambiguity about what they should audit native apps and web against</li>
                 </ul>
@@ -94,7 +94,7 @@
 
             <ul class="standard-details">
                 <li>Take the best and ignore the rest</li>
-                <li>Recognise when operating system design decisions don't meet high enough standards and make your own</li>
+                <li>Recognise when operating system design decisions don’t meet high enough standards and develop your own</li>
             </ul>
 
             <div class="rationale-box">
@@ -102,9 +102,8 @@
 
                 <ul class="rationale-details">
                     <li>Native operating systems have some amazing accessibility features that are a great enhancement to any experience</li>
-                    <li>You'll benefit from yearly updates and improvements using iOS and Android patterns</li>
-                    <li>Google and Apple don’t always get it right when it comes to accessible UI decisions. In fact, they have proven history of getting it wrong</li>
-                    <li>Many public service apps have gone against Apple and Android guidelines in some areas for Accessibility reasons</li>
+                    <li>You’ll benefit from yearly updates and improvements using iOS and Android patterns</li>
+                    <li>Google and Apple don’t always get it right when it comes to accessible UI. Take the responsibility to not pass on these mistakes to your users</li>
                 </ul>
             </div>
 
@@ -140,8 +139,8 @@
             <h2>Respect user preferences</h2>
 
             <ul class="standard-details">
-                <li>Native apps and websites adapt to personal settings, that could be increasing font size, using their own styles or turning off animations</li>
-                <li>Don't design a single "accessible" mode. When we have themes, such as Light and Dark mode, they meet the same accessibility standards. The only exception is when the user has asked us not to.</li>
+                <li>Native apps and websites need to adapt to personal settings. That could be increasing font size, using custom styles or turning off animations</li>
+                <li>When we have themes, such as Light and Dark mode, they should meet the same accessibility standards. The only exception is when the user has asked us not to</li>
             </ul>
 
 
@@ -176,7 +175,7 @@
 
                 <ul class="rationale-details">
                     <li>We need to actively promote design is “how things work” and not just what it looks like</li>
-                    <li>Organisations always under estimate the accessibility issues caused by “skinning” websites</li>
+                    <li>Organisations under estimate the accessibility issues caused by “skinning” websites</li>
                     <li>Inconsistent keyboard interaction is significantly more impactful to a user than the wrong colour or wrong border radius</li>
                     <li>People that move between platforms or domains should have a predicatble experience</li>
                 </ul>
@@ -199,8 +198,8 @@
                 <h3>Rationale:</h3>
 
                 <ul class="rationale-details">
-                    <li>Webviews, even in “Software” need to be treated as websites as they cannot access many accessibility features of mobile operating systems</li>
-                    <li>The design of web and native will likely have to be different in a number of places. Web cannot always follow native standards because the UI maybe inacessible if used on web</li>
+                    <li>Webviews, even in “Software” need to be treated as websites. They cannot access many accessibility features of mobile operating systems</li>
+                    <li>The design of web and native elements will need to be different in a number of places</li>
                     <li>People should be able to recognise when they are in a webview. Their interactions and audible cues will be different and they may need to adjust how they browse</li>
                 </ul>
             </div>
@@ -224,10 +223,9 @@
 
                 <ul class="rationale-details">
                     <li>WebAim surveyed the top 1 million home pages and 56,791,260 distinct accessibility errors were detected—an average of 56.8 errors per page</li>
-                    <li>If we base what good is on other people’s choices we only add to the problem</li>
-                    <li>Many perceived “inspirational”, “modern”, “exciting” brands simply do not consider accessibility enough (or at all)</li>
-                    <li>Many leading design agencies and ux consultancies or development houses do the absolute bare minimum for accessibility</li>
-                    <li>You can always do more</li>
+                    <li>If we base "good" on organisatons that do the bare minimum for accessibility, we add to the problem</li>
+                    <li>The standards organisations say they will meet rarely align with the reality</li>
+                    <li>You can always, always, always do more</li>
                 </ul>
             </div>
 
