--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     </header>
 
     <main>
-
+        
         <h2>The Standards</h2>
 
         <ol class="standards">
@@ -28,6 +28,7 @@
             <li>Respect platform conventions, but know when to go against them</li>
             <li>Strive for simplicity</li>
             <li>Respect user preferences</li>
+            <li>Value behavioural consistency as much as visual cohesion</li>
             <li>Be honest about technology</li>
             <li>Set a new benchmark of inclusivity</li>
         </ol>
@@ -36,7 +37,7 @@
 
         <section>
 
-            <h2>Be inclusive by default</h2>
+            <h2 id="standard-1">Be inclusive by default</h2>
 
             <ul class="standard-details">
                 <li>Never rely on settings or modes to meet basic accessibility standards</li>
@@ -65,7 +66,7 @@
 
         <section>
 
-            <h2>Know what you need to meet, and aim to go further</h2>
+            <h2 id="standard-2">Know what you need to meet, and aim to go further</h2>
 
             <ul class="standard-details">
                 <li>Always go beyond the minimum accessibility guidelines</li>
@@ -90,7 +91,7 @@
 
         <section>
 
-            <h2>Respect platform conventions, but know when to go against them</h2>
+            <h2 id="standard-3">Respect platform conventions, but know when to go against them</h2>
 
             <ul class="standard-details">
                 <li>Take the best and ignore the rest</li>
@@ -113,7 +114,7 @@
 
         <section>
 
-            <h2>Strive for simplicity</h2>
+            <h2 id="standard-4">Strive for simplicity</h2>
 
             <ul class="standard-details">
                 <li>Content and interface design should be as simple to comprehend and use as possible. Regularly question every element on a screen and actively remove as much as you add</li>
@@ -136,7 +137,7 @@
 
         <section>
 
-            <h2>Respect user preferences</h2>
+            <h2 id="standard-5">Respect user preferences</h2>
 
             <ul class="standard-details">
                 <li>Native apps and websites need to adapt to personal settings. That could be increasing font size, using custom styles or turning off animations</li>
@@ -161,7 +162,7 @@
 
         <section>
 
-            <h2>Value behavioural consistency as much as visual cohesion</h2>
+            <h2 id="standard-6">Value behavioural consistency as much as visual cohesion</h2>
 
             <ul class="standard-details">
                 <li>Elements that look the same should behave the same</li>
@@ -187,7 +188,7 @@
 
         <section>
 
-            <h2>Be honest about technology</h2>
+            <h2 id="standard-7">Be honest about technology</h2>
 
             <ul class="standard-details">
                 <li>Strive to create native experiences to whatever platform the customer is interacting with</li>
@@ -210,7 +211,7 @@
 
         <section>
 
-            <h2>Set a new benchmark of inclusivity</h2>
+            <h2 id="standard-8">Set a new benchmark of inclusivity</h2>
 
             <ul class="standard-details">
                 <li>The majority of websites and apps are not accessible</li>
