--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
 
                 <ul class="rationale-details">
                     <li>All websites, web apps and web-views should exceed WCAG 2.2 AA</li>
-                    <li><a href="https://www.w3.org/TR/wcag2ict-22/">WCAG2ITC</a> provides a "notes in the margin" approch to how WCAG 2.2 can bee applied to non-web software and documents</li>
+                    <li><a href="https://www.w3.org/TR/wcag2ict-22/">WCAG2ITC</a> provides a "notes in the margin" approch to how WCAG 2.2 can be applied to non-web software and documents</li>
                     <li>The European Standard for Accessibility excludes 6 WCAG success criteria (and modified 13) for appications. Read about this on <a href="https://appt.org/en/guidelines/en-301-549">Appt.org - EN 301 549</a></li>
                     <li>Aligning to a universal standard means Design and QA will have less ambiguity about what they should audit native apps and web against</li>
                 </ul>
