Fix a few typos

--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
             <ul class="standard-details">
                 <li>Never rely on settings or modes to meet basic accessibility standards</li>
                 <li>Settings can and should be used to further enhance an already accessible experience</li>
-                <li>Don't associate all accessibility features with assistive techology</li>
+                <li>Don't associate all accessibility features with assistive technology</li>
             </ul>
 
             <div class="rationale-box">
@@ -52,7 +52,7 @@
                 <ul class="rationale-details">
                     <li>Settings require awareness, ease of discovery and an understanding of how they could help. Don't assume people who could benefit from Accessibility settings are aware they exist</li>
                     <li>Web or Webviews within apps cannot reliably use OS settings to meet accessibility standards. If you rely on accessibility settings in app, shared cross-platform design is not possible</li>
-                    <li>Adding accessible UI only when a screen reader is detected buckets unrelated disabilities together. Avoid making an “accessibilty view" and make your default experince accessible.</li>
+                    <li>Adding accessible UI only when a screen reader is detected buckets unrelated disabilities together. Avoid making an “accessibility view" and make your default experience accessible.</li>
     
                 </ul>
 
@@ -79,8 +79,8 @@
 
                 <ul class="rationale-details">
                     <li>All websites, web apps and web-views should exceed WCAG 2.2 AA</li>
-                    <li><a href="https://www.w3.org/TR/wcag2ict-22/">WCAG2ITC</a> provides a "notes in the margin" approch to how WCAG 2.2 can be applied to non-web software and documents</li>
-                    <li>The European Standard for Accessibility excludes 6 WCAG success criteria (and modified 13) for appications. Read about this on <a href="https://appt.org/en/guidelines/en-301-549">Appt.org - EN 301 549</a></li>
+                    <li><a href="https://www.w3.org/TR/wcag2ict-22/">WCAG2ITC</a> provides a "notes in the margin" approach to how WCAG 2.2 can be applied to non-web software and documents</li>
+                    <li>The European Standard for Accessibility excludes 6 WCAG success criteria (and modified 13) for applications. Read about this on <a href="https://appt.org/en/guidelines/en-301-549">Appt.org - EN 301 549</a></li>
                     <li>Aligning to a universal standard means Design and QA will have less ambiguity about what they should audit native apps and web against</li>
                 </ul>
             </div>
@@ -178,7 +178,7 @@
                     <li>We need to actively promote design is “how things work” and not just what it looks like</li>
                     <li>Organisations under estimate the accessibility issues caused by “skinning” websites</li>
                     <li>Inconsistent keyboard interaction is significantly more impactful to a user than the wrong colour or wrong border radius</li>
-                    <li>People that move between platforms or domains should have a predicatble experience</li>
+                    <li>People that move between platforms or domains should have a predictable experience</li>
                 </ul>
             </div>
 
@@ -215,7 +215,7 @@
 
             <ul class="standard-details">
                 <li>The majority of websites and apps are not accessible</li>
-                <li>Don't base your standards on other companies or competetors. Let them to base their standards on you</li>
+                <li>Don't base your standards on other companies or competitors. Let them to base their standards on you</li>
                 <li>Be ok with parts of the design being different when they have to be</li>
             </ul>
 
@@ -224,7 +224,7 @@
 
                 <ul class="rationale-details">
                     <li>WebAim surveyed the top 1 million home pages and 56,791,260 distinct accessibility errors were detected—an average of 56.8 errors per page</li>
-                    <li>If we base "good" on organisatons that do the bare minimum for accessibility, we add to the problem</li>
+                    <li>If we base "good" on organisations that do the bare minimum for accessibility, we add to the problem</li>
                     <li>The standards organisations say they will meet rarely align with the reality</li>
                     <li>You can always, always, always do more</li>
                 </ul>
